tests/paczka1/fuzzy1/24734228.err
Error in line 1: TWQgppPl1C S289 4,23
Error in line 8: TWQgppPl1C S289 49,8
Error in line 2: xrOoo7JRDEB S289 76,8
Error in line 14: xrOoo7JRDEB S527 97,3
Error in line 17: MvKbXHa1YEM A790 65,9
Error in line 13: TWQgppPl1C A790 34,4
Error in line 21: MvKbXHa1YEM S289 65,3
Error in line 32: 7ZF A145 50,2
Error in line 31: i6bbZZt A790 68,7
